<resources>
    <string name="app_name">Calculator</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_plus">+</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_minus">-</string>
    <string name="_6">6</string>
    <string name="_skobki">()</string>
    <string name="_proc">%</string>
    <string name="ac">AC</string>
    <string name="_devorce">/</string>
    <string name="textview">TextView</string>
    <string name="_step">^</string>
    <string name="sqrt">SQRT</string>
    <string name="factor">!</string>
    <string name="pi">Pi</string>
    <string name="backspace">back space</string>
    <string name="eql">=</string>
    <string name="zap">,</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_7">7</string>
    <string name="x">x</string>
</resources>