<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/two"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/zap"
        app:layout_constraintEnd_toStartOf="@+id/three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/one"
        app:layout_constraintTop_toBottomOf="@+id/five"
        />

    <Button
        android:id="@+id/three"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/del"
        app:layout_constraintEnd_toStartOf="@+id/plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/two"
        app:layout_constraintTop_toBottomOf="@+id/six" />

    <Button
        android:id="@+id/one"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/zero"
        app:layout_constraintEnd_toStartOf="@+id/two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four" />

    <Button
        android:id="@+id/plus"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_plus"
        app:layout_constraintBottom_toTopOf="@+id/numEq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/three"
        app:layout_constraintTop_toBottomOf="@+id/minus" />

    <Button
        android:id="@+id/five"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/two"
        app:layout_constraintEnd_toStartOf="@+id/six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/four"
        app:layout_constraintTop_toBottomOf="@+id/eight" />

    <Button
        android:id="@+id/four"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seven" />

    <Button
        android:id="@+id/minus"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_minus"
        app:layout_constraintBottom_toTopOf="@+id/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/six"
        app:layout_constraintTop_toBottomOf="@+id/mul" />

    <Button
        android:id="@+id/six"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/three"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/five"
        app:layout_constraintTop_toBottomOf="@+id/nine" />

    <Button
        android:id="@+id/skobki"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_skobki"
        app:layout_constraintBottom_toTopOf="@+id/eight"
        app:layout_constraintEnd_toStartOf="@+id/proc"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/allclear"
        app:layout_constraintTop_toBottomOf="@+id/pi" />

    <Button
        android:id="@+id/proc"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_proc"
        app:layout_constraintBottom_toTopOf="@+id/nine"
        app:layout_constraintEnd_toStartOf="@+id/devorce"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/skobki"
        app:layout_constraintTop_toBottomOf="@+id/sqr" />

    <Button
        android:id="@+id/allclear"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/ac"
        app:layout_constraintBottom_toTopOf="@+id/seven"
        app:layout_constraintEnd_toStartOf="@+id/skobki"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sqrt" />

    <Button
        android:id="@+id/devorce"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_devorce"
        app:layout_constraintBottom_toTopOf="@+id/mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/proc"
        app:layout_constraintTop_toBottomOf="@+id/fact" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="373dp"
        android:layout_height="102dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sqr"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_step"
        app:layout_constraintBottom_toTopOf="@+id/proc"
        app:layout_constraintEnd_toStartOf="@+id/fact"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pi"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/sqrt"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/sqrt"
        app:layout_constraintBottom_toTopOf="@+id/allclear"
        app:layout_constraintEnd_toStartOf="@+id/pi"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/fact"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/factor"
        app:layout_constraintBottom_toTopOf="@+id/devorce"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sqr"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/pi"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/pi"
        app:layout_constraintBottom_toTopOf="@+id/skobki"
        app:layout_constraintEnd_toStartOf="@+id/sqr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sqrt"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/del"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/backspace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numEq"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zap"
        app:layout_constraintTop_toBottomOf="@+id/three" />

    <Button
        android:id="@+id/numEq"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/eql"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/del"
        app:layout_constraintTop_toBottomOf="@+id/plus" />

    <Button
        android:id="@+id/zap"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/zap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/del"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/zero"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <Button
        android:id="@+id/zero"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/zap"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <Button
        android:id="@+id/eight"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/five"
        app:layout_constraintEnd_toStartOf="@+id/nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/seven"
        app:layout_constraintTop_toBottomOf="@+id/skobki" />

    <Button
        android:id="@+id/nine"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/six"
        app:layout_constraintEnd_toStartOf="@+id/mul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/eight"
        app:layout_constraintTop_toBottomOf="@+id/proc" />

    <Button
        android:id="@+id/seven"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/four"
        app:layout_constraintEnd_toStartOf="@+id/eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/allclear" />

    <Button
        android:id="@+id/mul"
        android:layout_width="99dp"
        android:layout_height="69dp"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@+id/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nine"
        app:layout_constraintTop_toBottomOf="@+id/devorce" />

</androidx.constraintlayout.widget.ConstraintLayout>